minor issue with search bar on mobile fixed

--- a/assets/styles/header.scss
+++ b/assets/styles/header.scss
@@ -228,7 +228,7 @@ header {
 }
 
 .display-search {
-  transform: translateY(60px);
+  transform: translateY(59px);
   grid-template-columns: auto;
   opacity: 1;
   transition: all 0.3s;
